--- a/alicia.html
+++ b/alicia.html
@@ -1,5 +1,7 @@
-Hej jag heter Alicia
+Hej jag heter Alicia <br>
 
-Kan tillägga att jag är 28 år
+Kan tillägga att jag är 28 år <br>
 
-Juste, jag har blåa ögon och blont hår
+Juste, jag har blåa ögon och blont hår<br>
+
+a href="index.html">"Tillbaka till startsidan"</a>
