--- a/alicia.html
+++ b/alicia.html
@@ -1,7 +1,22 @@
-Hej jag heter Alicia <br>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+    <H1>OM MIG</H1>
 
-Kan tillägga att jag är 28 år <br>
+    <p>
+        Jag heter Alicia och är 28 år <br>
+        Jag har mörkblont hår och blå ögon <br>
+        Jag bor i Stockholm men flyttar nästa vecka till Grekland
+    </p>
 
-Juste, jag har blåa ögon och blont hår<br>
+    <a href="index.html"> Tillbaka till Startsidan </a>
 
-<a href="index.html"> Tillbaka till Startsidan </a>
+</body>
+</html>
+
