--- a/alicia.html
+++ b/alicia.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Min sida</title>
 </head>
 <body>
     
-    <H1>OM MIG</H1>
+    <h1 style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size: 200%;">OM MIG</H1>
 
     <p>
         Jag heter Alicia och är 28 år <br>
