ändring utav Index

--- a/index.html
+++ b/index.html
@@ -1,3 +1,21 @@
-Hej, här är min sida
+<!DOCTYPE html>
+<html lang="en">
 
-<a href="alicia.html"> Om mig </a>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Min sida</title>
+</head>
+
+<body>
+    <h1
+        style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size: 200%;">
+        Välkommen till min sida!</H1>
+
+    <p style="font-family: Georgia, 'Times New Roman', Times, serif; font-size: 100%;">
+        Vill du läsa mer om mig så kan du göra det via länken nedan; <br>
+        <a href="alicia.html"> All about Alicia </a>
+    </p>
+</body>
+
+</html>
