nya ändringar + ny sida

--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,33 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contakt</title>
+</head>
+<body>
+
+    <h1 style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size: 200%;">CONTACT</H1>
+
+        <P>
+            Här kan ni kontakta mig: <br>
+
+            <ol>
+                <li>Instagram: @aliciapiyi</li>
+                <li>Email: alicia.piyi@gmail.com</li>
+                <li>Tel: 073 758 99 16</li>
+            </ol>
+        </P>
+
+        <p style="font-family: Georgia, 'Times New Roman', Times, serif; font-size: 100%;">
+            Tillbaka till startsidan; <br>
+            <a href="index.html"> Klicka här </a>
+        </p>
+
+</body>
+</html>
+
+
 Här hittar du mina kontaktuppgiter! <br>
 
 <p> AlibabaAliciana </p>
