--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
         Vill du läsa mer om mig så kan du göra det via länken nedan; <br>
         <a href="alicia.html"> All about Alicia </a>
     </p>
+
+    <p style="font-family: Georgia, 'Times New Roman', Times, serif; font-size: 100%;">
+        Kontakta mig på länken nedan <br>
+        <a href="contact.html"> Kontakt </a>
+    </p>
+
 </body>
 
 </html>
